[package]
name = "vault_iam_auth"
version = "0.1.0"
description = "HashiCorp Vault authentication for the AWS IAM engine"
readme = "README.md"
repository = "https://github.com/callensm/vault-iam-auth-rs"
license = "MIT"
authors = ["Matt Callens <callensmatt@gmail.com>"]
keywords = ["hashicorp", "vault", "aws", "iam", "authentication", "login"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.4", features = ["json"] }
rusoto_core = "0.47.0"
rusoto_signature = "0.47.0"
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"

[dev-dependencies]
tokio = "1.9.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
